[gd_scene load_steps=19 format=4 uid="uid://dapwydycpy01f"]

[ext_resource type="Shader" path="res://Script/scale_gray.gdshader" id="1_3ehcv"]
[ext_resource type="Script" path="res://Script/level.gd" id="2_qu7in"]
[ext_resource type="PackedScene" uid="uid://btt6g64jlilfm" path="res://Scenes/Player/player.tscn" id="3_8ton5"]
[ext_resource type="PackedScene" uid="uid://cns5qkkccmb6c" path="res://Scenes/espinhos.tscn" id="4_6xphw"]
[ext_resource type="PackedScene" uid="uid://cssy064ugpm1q" path="res://Scenes/Tiles/tiles.tscn" id="5_x7i4r"]
[ext_resource type="Texture2D" uid="uid://d4btevtjmv7k4" path="res://Assets/background.png" id="6_68u4f"]
[ext_resource type="FontFile" uid="uid://bjhylce72qhln" path="res://Assets/Daydream.ttf" id="7_aee8n"]
[ext_resource type="Texture2D" uid="uid://r4v4qqdp0rwm" path="res://Assets/retry.png" id="7_jckbu"]
[ext_resource type="PackedScene" uid="uid://l0jorritb706" path="res://Scenes/dialogue.tscn" id="9_rskpq"]
[ext_resource type="PackedScene" uid="uid://bieixcj3tc1ri" path="res://Scenes/enemy.tscn" id="10_dnr04"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_5g2ec"]
shader = ExtResource("1_3ehcv")
shader_parameter/change = true

[sub_resource type="Animation" id="Animation_dnme3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Game_Over/Control:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_3xdlb"]
resource_name = "fade_in"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Game_Over/Control:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_wtq3h"]
resource_name = "fade_out"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Game_Over/Control:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(0, 0, 0, 1)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"change_scene"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_fa8s1"]
_data = {
"RESET": SubResource("Animation_dnme3"),
"fade_in": SubResource("Animation_3xdlb"),
"fade_out": SubResource("Animation_wtq3h")
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_trwhl"]
shader = ExtResource("1_3ehcv")
shader_parameter/change = true

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dj0yx"]
size = Vector2(3177, 262)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nsu5i"]
size = Vector2(643, 242)

[node name="Level1SS" type="Node2D"]
material = SubResource("ShaderMaterial_5g2ec")
script = ExtResource("2_qu7in")

[node name="Player" parent="." instance=ExtResource("3_8ton5")]
position = Vector2(53, 292)

[node name="Camera2D" type="Camera2D" parent="Player"]
zoom = Vector2(0.6, 0.6)
limit_left = 0
limit_top = -130
limit_right = 4033
limit_bottom = 518
position_smoothing_enabled = true
editor_draw_limits = true

[node name="Grupos_Espinhos" type="Node2D" parent="."]

[node name="Espinhos" parent="Grupos_Espinhos" instance=ExtResource("4_6xphw")]
position = Vector2(1696, 358)

[node name="Espinhos2" parent="Grupos_Espinhos" instance=ExtResource("4_6xphw")]
position = Vector2(2208, 358)

[node name="Espinhos3" parent="Grupos_Espinhos" instance=ExtResource("4_6xphw")]
position = Vector2(2272, 358)

[node name="Espinhos4" parent="Grupos_Espinhos" instance=ExtResource("4_6xphw")]
position = Vector2(2336, 358)

[node name="Espinhos5" parent="Grupos_Espinhos" instance=ExtResource("4_6xphw")]
position = Vector2(2912, 294)

[node name="Animation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_fa8s1")
}
autoplay = "fade_in"

[node name="Tiles" parent="." instance=ExtResource("5_x7i4r")]
position = Vector2(-128, 6)
tile_map_data = PackedByteArray("AAAAABcAAAAAAAAAAAAAABgAAAAAAAEAAAAAABkAAAAAAAEAAAAAABoAAAAAAAIAAAABABcAAAABAAAAAAACABcAAAABAAAAAAADABcAAAABAAAAAAAEABcAAAABAAAAAAAFABcAAAABAAAAAAAGABcAAAABAAAAAAAHABcAAAABAAAAAAAIABcAAAABAAAAAAAJABcAAAABAAAAAAAKABcAAAABAAAAAAALABcAAAABAAAAAAAMABcAAAABAAAAAAANABcAAAABAAAAAAAOABcAAAABAAAAAAAPABcAAAABAAAAAAAQABcAAAABAAAAAAARABcAAAABAAAAAAASABcAAAABAAAAAAATABcAAAABAAAAAAAUABcAAAABAAAAAAAVABcAAAABAAAAAAAWABcAAAABAAAAAAAXABcAAAABAAAAAAAYABcAAAABAAAAAAAZABcAAAABAAAAAAAaABcAAAABAAAAAAAbABcAAAABAAAAAAAcABcAAAABAAAAAAAdABcAAAABAAAAAAAeABcAAAABAAAAAAAfABcAAAABAAAAAAAgABcAAAABAAAAAAAhABcAAAABAAAAAAAiABcAAAABAAAAAAAjABcAAAABAAAAAAAkABcAAAABAAAAAAAlABcAAAABAAAAAAAmABcAAAABAAAAAAAnABcAAAABAAAAAAABABoAAAABAAIAAAACABoAAAABAAIAAAADABoAAAABAAIAAAAEABoAAAABAAIAAAAFABoAAAABAAIAAAAGABoAAAABAAIAAAAHABoAAAABAAIAAAAIABoAAAABAAIAAAAJABoAAAABAAIAAAAKABoAAAABAAIAAAALABoAAAABAAIAAAAMABoAAAABAAIAAAANABoAAAABAAIAAAAOABoAAAABAAIAAAAPABoAAAABAAIAAAAQABoAAAABAAIAAAARABoAAAABAAIAAAASABoAAAABAAIAAAATABoAAAABAAIAAAAUABoAAAABAAIAAAAVABoAAAABAAIAAAAWABoAAAABAAIAAAAXABoAAAABAAIAAAAYABoAAAABAAIAAAAZABoAAAABAAIAAAAaABoAAAABAAIAAAAbABoAAAABAAIAAAAcABoAAAABAAIAAAAdABoAAAABAAIAAAAeABoAAAABAAIAAAAfABoAAAABAAIAAAAgABoAAAABAAIAAAAhABoAAAABAAIAAAAiABoAAAABAAIAAAAjABoAAAABAAIAAAAkABoAAAABAAIAAAAlABoAAAABAAIAAAAmABoAAAABAAIAAAAnABoAAAABAAIAAAAoABcAAAACAAAAAAAoABgAAAACAAEAAAAoABkAAAACAAEAAAAoABoAAAACAAIAAAAZABkAAAABAAEAAAAZABgAAAABAAEAAAAYABgAAAABAAEAAAAXABgAAAABAAEAAAAWABgAAAABAAEAAAAVABgAAAABAAEAAAAUABgAAAABAAEAAAATABgAAAABAAEAAAASABgAAAABAAEAAAARABgAAAABAAEAAAAQABgAAAABAAEAAAAPABgAAAABAAEAAAAOABgAAAABAAEAAAANABgAAAABAAEAAAAMABgAAAABAAEAAAALABgAAAABAAEAAAAKABgAAAABAAEAAAAJABgAAAABAAEAAAAIABgAAAABAAEAAAAHABgAAAABAAEAAAAGABgAAAABAAEAAAAFABgAAAABAAEAAAAEABgAAAABAAEAAAADABgAAAABAAEAAAACABgAAAABAAEAAAABABgAAAABAAEAAAABABkAAAABAAEAAAACABkAAAABAAEAAAADABkAAAABAAEAAAAEABkAAAABAAEAAAAFABkAAAABAAEAAAAGABkAAAABAAEAAAAHABkAAAABAAEAAAAIABkAAAABAAEAAAAJABkAAAABAAEAAAAKABkAAAABAAEAAAALABkAAAABAAEAAAAMABkAAAABAAEAAAANABkAAAABAAEAAAAOABkAAAABAAEAAAAPABkAAAABAAEAAAAQABkAAAABAAEAAAARABkAAAABAAEAAAASABkAAAABAAEAAAATABkAAAABAAEAAAAUABkAAAABAAEAAAAVABkAAAABAAEAAAAWABkAAAABAAEAAAAXABkAAAABAAEAAAAYABkAAAABAAEAAAAaABgAAAABAAEAAAAaABkAAAABAAEAAAAbABkAAAABAAEAAAAbABgAAAABAAEAAAAcABgAAAABAAEAAAAcABkAAAABAAEAAAAdABkAAAABAAEAAAAdABgAAAABAAEAAAAeABgAAAABAAEAAAAeABkAAAABAAEAAAAfABkAAAABAAEAAAAfABgAAAABAAEAAAAgABgAAAABAAEAAAAgABkAAAABAAEAAAAhABkAAAABAAEAAAAhABgAAAABAAEAAAAiABgAAAABAAEAAAAiABkAAAABAAEAAAAjABkAAAABAAEAAAAjABgAAAABAAEAAAAkABgAAAABAAEAAAAkABkAAAABAAEAAAAlABkAAAABAAEAAAAlABgAAAABAAEAAAAmABgAAAABAAEAAAAmABkAAAABAAEAAAAnABkAAAABAAEAAAAnABgAAAABAAEAAAD//xgAAAACAAQAAAD//xkAAAACAAUAAAD//xoAAAACAAYAAAD//xUAAAACAAQAAAD//xYAAAACAAUAAAD//xcAAAACAAYAAAD//xIAAAACAAQAAAD//xMAAAACAAUAAAD//xQAAAACAAYAAAD//w8AAAACAAYAAAD//xAAAAACAAUAAAD//xEAAAACAAYAAAD//w0AAAACAAQAAAD//w4AAAACAAUAAAD//woAAAACAAQAAAD//wsAAAACAAUAAAD//wwAAAACAAYAAAD+/woAAAACAAQAAAD+/wsAAAACAAUAAAD+/wwAAAACAAYAAAD+/wcAAAACAAQAAAD+/wgAAAACAAUAAAD+/wkAAAACAAYAAAD//wcAAQAAAAIAAAD//wgAAAACAAUAAAD//wkAAAACAAYAAAD//wQAAQAAAAEAAAD//wUAAQAAAAEAAAD//wYAAQAAAAEAAAD+/wQAAAACAAQAAAD+/wUAAAACAAUAAAD+/wYAAAACAAYAAAD+/w0AAAACAAQAAAD+/w4AAAACAAUAAAD+/w8AAAACAAYAAAD+/xAAAAACAAQAAAD+/xEAAAACAAUAAAD+/xIAAAACAAQAAAD+/xMAAAACAAUAAAD+/xQAAAACAAYAAAD+/xUAAAACAAQAAAD+/xYAAAACAAUAAAD+/xcAAAACAAYAAAD+/xgAAAACAAQAAAD+/xkAAAACAAUAAAD+/xoAAAACAAYAAAD//wEAAQAAAAEAAAD//wIAAQAAAAEAAAD//wMAAQAAAAEAAAD+/wEAAAACAAQAAAD+/wIAAAACAAUAAAD+/wMAAAACAAYAAAD///7/AQAAAAEAAAD/////AQAAAAEAAAD//wAAAQABAAEAAAD+//7/AAACAAQAAAD+////AAACAAUAAAD+/wAAAAACAAYAAAATAAgAAAAAAAkAAAATAAkAAAAAAAkAAAATAAoAAAAAAAkAAAATAAsAAAAAAAkAAAATAAwAAAAAAAkAAAATAA0AAAAAAAkAAAATAA4AAAAAAAkAAAASAA4AAAAAAAkAAAASAA8AAAAAAAkAAAASABAAAAAAAAkAAAASABEAAAAAAAkAAAASABIAAAAAAAkAAAASABMAAAAAAAkAAAASAA0AAAAAAAkAAAASAAwAAAAAAAkAAAASAAsAAAAAAAkAAAASAAoAAAAAAAkAAAASAAkAAAAAAAkAAAASAAgAAAAAAAkAAAASAAcAAAAAAAkAAAASABQAAAAAAAkAAAASABUAAAAAAAkAAAASABYAAAAAAAkAAAAOABYAAAAAAAIAAAAOABUAAAAAAAIAAAAOABQAAAAAAAIAAAAOABMAAAAAAAIAAAAOABIAAAAAAAIAAAAOABEAAAAAAAIAAAAOABAAAAAAAAIAAAAOAA8AAAAAAAIAAAAOAA4AAAAAAAIAAAAOAA0AAAAAAAIAAAAOAAwAAAAAAAIAAAAOAAsAAAAAAAIAAAAOAAoAAAAAAAIAAAAOAAkAAAAAAAIAAAAOAAgAAAAAAAIAAAAOAAcAAQABAAIAAAABAAUAAQABAAEAAAACAAUAAQABAAAAAAADAAUAAQABAAAAAAAEAAUAAQABAAAAAAAFAAUAAQABAAAAAAAGAAUAAQABAAAAAAAHAAUAAQABAAAAAAAHAAYAAQABAAEAAAAGAAYAAQABAAEAAAAFAAYAAQABAAEAAAAEAAYAAQABAAEAAAADAAYAAQABAAEAAAACAAYAAQABAAEAAAABAAYAAQABAAEAAAAHAAcAAQABAAIAAAACAAcAAQABAAIAAAADAAcAAQABAAIAAAAEAAcAAQABAAIAAAAFAAcAAQABAAIAAAAGAAcAAQABAAIAAAABAAcAAQABAAIAAAAIAAUAAQABAAAAAAAIAAYAAQABAAEAAAAIAAcAAQABAAIAAAAAAAUAAQABAAEAAAAAAAQAAQABAAEAAAABAAQAAQACAAEAAAAAAAYAAQABAAEAAAAAAAcAAQABAAIAAAABAAMAAQACAAEAAAAAAAMAAQABAAEAAAAAAAIAAQABAAEAAAABAAIAAQACAAEAAAABAAEAAQACAAEAAAAAAAEAAQABAAEAAAAJAAYAAQACAAEAAAAJAAcAAQACAAIAAAAMAAcAAQAAAAIAAAANAAcAAQABAAIAAAANAAYAAQABAAEAAAAOAAYAAQABAAEAAAANAAUAAQABAAEAAAAMAAUAAQAAAAAAAAAMAAYAAQAAAAEAAAAOAAUAAQABAAEAAAAJAAUAAQACAAAAAAANAAQAAQAAAAAAAAAOAAQAAQABAAEAAAABAAAAAQACAAEAAAAAAAAAAQABAAEAAAAAAP//AQABAAEAAAABAP7/AQACAAEAAAAAAP7/AQABAAEAAAABAP3/AQABAAEAAAAAAP3/AQABAAEAAAD///3/AQAAAAEAAAACAP3/AQABAAIAAAADAP3/AQABAAIAAAAEAP3/AQABAAIAAAAFAP3/AQABAAIAAAAGAP3/AQABAAIAAAAHAP3/AQABAAIAAAAGAPz/AQABAAEAAAAFAPz/AQABAAEAAAAEAPz/AQABAAEAAAAHAPz/AQABAAEAAAAIAPz/AQABAAEAAAAIAP3/AQABAAIAAAAJAP3/AQABAAIAAAADAPz/AQABAAEAAAACAPz/AQABAAEAAAABAPz/AQABAAEAAAAAAPz/AQABAAEAAAD///z/AQAAAAEAAAAJAPz/AQABAAEAAAAPAAcAAQACAAIAAAAPAAYAAQACAAEAAAAPAAUAAQACAAEAAAAPAAQAAQACAAEAAAAPAAMAAQACAAAAAAAOAAMAAQAAAAAAAAANAP3/AQABAAIAAAAMAP3/AQABAAIAAAAKAP3/AQABAAIAAAALAP3/AQABAAIAAAAPAP3/AQABAAIAAAAQAP3/AQABAAIAAAAOAP3/AQABAAIAAAAKAPz/AQABAAEAAAALAPz/AQABAAEAAAAMAPz/AQABAAEAAAANAPz/AQABAAEAAAAOAPz/AQABAAEAAAAPAPz/AQABAAEAAAAQAPz/AQABAAEAAAARAPz/AQABAAEAAAARAP3/AQABAAIAAAAVAAUAAQABAAAAAAAWAAUAAQABAAAAAAAXAAUAAQABAAAAAAAYAAUAAQABAAAAAAAZAAUAAQABAAAAAAAaAAUAAQABAAAAAAAbAAUAAQACAAAAAAAVAAYAAQABAAEAAAAWAAYAAQABAAEAAAAXAAYAAQABAAEAAAAYAAYAAQABAAEAAAAZAAYAAQABAAEAAAAaAAYAAQABAAEAAAAbAAYAAQABAAEAAAAaAAcAAQABAAIAAAAZAAcAAQABAAIAAAAYAAcAAQABAAIAAAAXAAcAAQABAAIAAAAWAAcAAQABAAIAAAAVAAcAAQABAAIAAAAbAAcAAQABAAIAAAAcAAcAAQACAAIAAAAcAAYAAQACAAAAAAAUAAUAAQAAAAAAAAAUAAYAAQAAAAEAAAAUAAcAAQAAAAIAAAABAP//AQACAAEAAAADAPv/AQABAAAAAAAEAPv/AQABAAAAAAAFAPv/AQABAAAAAAAGAPv/AQABAAAAAAAHAPv/AQABAAAAAAAIAPv/AQABAAAAAAAJAPv/AQABAAAAAAAKAPv/AQABAAAAAAALAPv/AQABAAAAAAAMAPv/AQABAAAAAAANAPv/AQABAAAAAAAOAPv/AQABAAAAAAAPAPv/AQABAAAAAAAQAPv/AQABAAAAAAARAPv/AQABAAAAAAACAPv/AQABAAAAAAABAPv/AQABAAAAAAAAAPv/AQABAAAAAAD///v/AQAAAAAAAAA4AP3/AQABAAIAAAA4APz/AQABAAEAAAA4APv/AQABAAAAAAA3AP3/AQABAAIAAAA3APz/AQABAAEAAAA3APv/AQABAAAAAAA2AP3/AQABAAIAAAA2APz/AQABAAEAAAA2APv/AQABAAAAAAA1AP3/AQABAAIAAAA1APz/AQABAAEAAAA1APv/AQABAAAAAAA0AP3/AQABAAIAAAA0APz/AQABAAEAAAA0APv/AQABAAAAAAAzAP3/AQABAAIAAAAzAPz/AQABAAEAAAAzAPv/AQABAAAAAAAyAP3/AQABAAIAAAAyAPz/AQABAAEAAAAyAPv/AQABAAAAAAAxAP3/AQABAAIAAAAxAPz/AQABAAEAAAAxAPv/AQABAAAAAAAwAP3/AQABAAIAAAAwAPz/AQABAAEAAAAwAPv/AQABAAAAAAAvAP3/AQABAAIAAAAvAPz/AQABAAEAAAAvAPv/AQABAAAAAAAuAP3/AQABAAIAAAAuAPz/AQABAAEAAAAuAPv/AQABAAAAAAAtAP3/AQABAAIAAAAtAPz/AQABAAEAAAAtAPv/AQABAAAAAAAsAP3/AQABAAIAAAAsAPz/AQABAAEAAAAsAPv/AQABAAAAAAArAP3/AQABAAIAAAArAPz/AQABAAEAAAArAPv/AQABAAAAAAAqAP3/AQABAAIAAAAqAPz/AQABAAEAAAAqAPv/AQABAAAAAAApAP3/AQABAAIAAAApAPz/AQABAAEAAAApAPv/AQABAAAAAAAoAP3/AQABAAIAAAAoAPz/AQABAAEAAAAoAPv/AQABAAAAAAAnAP3/AQABAAIAAAAnAPz/AQABAAEAAAAnAPv/AQABAAAAAAAmAP3/AQABAAIAAAAmAPz/AQABAAEAAAAmAPv/AQABAAAAAAAlAP3/AQABAAIAAAAlAPz/AQABAAEAAAAlAPv/AQABAAAAAAAkAP3/AQABAAIAAAAkAPz/AQABAAEAAAAkAPv/AQABAAAAAAAjAP3/AQABAAIAAAAjAPz/AQABAAEAAAAjAPv/AQABAAAAAAAiAP3/AQABAAIAAAAiAPz/AQABAAEAAAAiAPv/AQABAAAAAAAhAP3/AQABAAIAAAAhAPz/AQABAAEAAAAhAPv/AQABAAAAAAAgAP3/AQABAAIAAAAgAPz/AQABAAEAAAAgAPv/AQABAAAAAAAfAP3/AQABAAIAAAAfAPz/AQABAAEAAAAfAPv/AQABAAAAAAAeAP3/AQABAAIAAAAeAPz/AQABAAEAAAAeAPv/AQABAAAAAAAdAP3/AQABAAIAAAAdAPz/AQABAAEAAAAdAPv/AQABAAAAAAAcAP3/AQABAAIAAAAcAPz/AQABAAEAAAAcAPv/AQABAAAAAAAbAP3/AQABAAIAAAAbAPz/AQABAAEAAAAbAPv/AQABAAAAAAAaAP3/AQABAAIAAAAaAPz/AQABAAEAAAAaAPv/AQABAAAAAAAZAP3/AQABAAIAAAAZAPz/AQABAAEAAAAZAPv/AQABAAAAAAAYAP3/AQABAAIAAAAYAPz/AQABAAEAAAAYAPv/AQABAAAAAAAXAP3/AQABAAIAAAAXAPz/AQABAAEAAAAXAPv/AQABAAAAAAAWAP3/AQABAAIAAAAWAPz/AQABAAEAAAAWAPv/AQABAAAAAAAVAP3/AQABAAIAAAAVAPz/AQABAAEAAAAVAPv/AQABAAAAAAAUAP3/AQABAAIAAAAUAPz/AQABAAEAAAAUAPv/AQABAAAAAAATAP3/AQABAAIAAAATAPz/AQABAAEAAAATAPv/AQABAAAAAAASAP3/AQABAAIAAAASAPz/AQABAAEAAAASAPv/AQABAAAAAAAfAAYAAQAAAAEAAAAgAAYAAQACAAEAAAAgAAcAAQACAAIAAAAfAAcAAQAAAAIAAAAfAAUAAQAAAAAAAAAgAAUAAQACAAEAAAAgAAQAAQACAAAAAAAjAAUAAQAAAAAAAAAjAAYAAQAAAAEAAAAkAAYAAQABAAAAAAAkAAcAAQABAAIAAAAlAAcAAQABAAIAAAAjAAcAAQAAAAIAAAAmAAcAAQABAAIAAAAnAAcAAQABAAIAAAAnAAYAAQABAAEAAAAnAAUAAQAAAAAAAAAmAAYAAQABAAAAAAAlAAYAAQABAAAAAAAoAAYAAQACAAEAAAAoAAcAAQACAAIAAAAoAAUAAQACAAEAAAAoAAQAAQACAAAAAAAuAAUAAQABAAEAAAAuAAQAAQACAAAAAAAuAAYAAQABAAEAAAAuAAcAAQABAAIAAAAvAAcAAQACAAIAAAAvAAYAAQACAAEAAAAvAAUAAQACAAAAAAAtAAUAAQABAAAAAAAtAAYAAQABAAEAAAAtAAcAAQABAAIAAAAsAAcAAQAAAAIAAAAsAAYAAQAAAAEAAAAsAAUAAQAAAAAAAAAyAAUAAQAAAAAAAAAyAAYAAQAAAAEAAAAyAAcAAQAAAAIAAAAzAAcAAQABAAIAAAA0AAcAAQABAAIAAAA1AAcAAQABAAIAAAA2AAcAAQABAAIAAAA1AAYAAQABAAEAAAA0AAYAAQABAAEAAAAzAAYAAQABAAEAAAAzAAUAAQABAAAAAAA0AAUAAQABAAAAAAA1AAUAAQABAAAAAAA2AAYAAQABAAEAAAA3AAYAAQABAAEAAAA4AAcAAQABAAIAAAA5AAcAAQABAAIAAAA6AAcAAQABAAIAAAA7AAcAAQABAAIAAAA9AAcAAQABAAIAAAA8AAcAAQABAAIAAAA3AAcAAQABAAIAAAA3AAUAAQABAAAAAAA2AAUAAQABAAAAAAA4AAUAAQABAAAAAAA5AAUAAQABAAAAAAA6AAUAAQABAAAAAAA7AAUAAQABAAAAAAA8AAUAAQABAAAAAAA9AAUAAQABAAAAAAA4AAYAAQABAAEAAAA5AAYAAQABAAEAAAA6AAYAAQABAAEAAAA7AAYAAQABAAEAAAA8AAYAAQABAAEAAAA9AAYAAQABAAEAAAA5AP3/AQABAAIAAAA5APv/AQABAAAAAAA6APv/AQABAAAAAAA7APv/AQABAAAAAAA8APv/AQABAAAAAAA9APv/AQABAAAAAAA9APz/AQABAAEAAAA9AP3/AQABAAIAAAA8AP3/AQABAAIAAAA7AP3/AQABAAIAAAA6AP3/AQABAAIAAAA5APz/AQABAAEAAAA6APz/AQABAAEAAAA7APz/AQABAAEAAAA8APz/AQABAAEAAAA+APv/AQABAAAAAAA+APz/AQABAAEAAAA+AP3/AQABAAEAAAA+AP7/AQABAAEAAAA+AP//AQAAAAEAAAA+AAAAAQAAAAEAAAA+AAEAAQAAAAEAAAA+AAIAAQAAAAEAAAA+AAMAAQABAAEAAAA+AAQAAQABAAEAAAA+AAUAAQABAAEAAAA+AAYAAQABAAEAAAA+AAcAAQABAAIAAAA/AAcAAQABAAIAAAA/AAYAAQABAAEAAAA/AAUAAQABAAEAAAA/AAQAAQABAAEAAAA/AAMAAQABAAEAAAA/AAIAAQABAAEAAAA/APv/AQABAAAAAAA/APz/AQABAAEAAAA/AP3/AQABAAEAAAA/AP7/AQABAAEAAAA/AP//AQABAAEAAAA/AAAAAQABAAEAAAA/AAEAAQABAAEAAABAAAcAAQACAAIAAABAAAYAAQACAAEAAABAAAUAAQACAAEAAABAAAQAAQACAAEAAABAAAMAAQACAAEAAABAAAIAAQACAAEAAABAAAEAAQACAAEAAABAAAAAAQACAAEAAABAAP//AQACAAEAAABAAP7/AQACAAEAAABAAP3/AQACAAEAAABAAPz/AQACAAEAAABAAPv/AQACAAAAAAA=")

[node name="Parallax" type="ParallaxBackground" parent="."]

[node name="Background" type="ParallaxLayer" parent="Parallax"]
position = Vector2(-8, -122)
motion_offset = Vector2(50, 0)
motion_mirroring = Vector2(1440, 0)

[node name="Sprite" type="Sprite2D" parent="Parallax/Background"]
material = SubResource("ShaderMaterial_trwhl")
position = Vector2(723, 240)
scale = Vector2(2.5, 2.5)
texture = ExtResource("6_68u4f")

[node name="Game_Over" type="CanvasLayer" parent="."]
visible = false

[node name="Control" type="Control" parent="Game_Over"]
modulate = Color(1, 1, 1, 0)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Color" type="ColorRect" parent="Game_Over/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Label" type="Label" parent="Game_Over/Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -222.5
offset_top = -34.5
offset_right = 222.5
offset_bottom = 34.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("7_aee8n")
theme_override_font_sizes/font_size = 50
text = "GAME OVER"
horizontal_alignment = 1

[node name="Retry" type="TextureRect" parent="Game_Over/Control"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -70.0
offset_top = -70.0
offset_right = 70.0
offset_bottom = -30.0
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("7_jckbu")
expand_mode = 1

[node name="Death_Area" type="Area2D" parent="."]

[node name="Collision" type="CollisionShape2D" parent="Death_Area"]
position = Vector2(1750, 649)
shape = SubResource("RectangleShape2D_dj0yx")

[node name="Dialogue" parent="." instance=ExtResource("9_rskpq")]
visible = false

[node name="Enemy" parent="." instance=ExtResource("10_dnr04")]
position = Vector2(3436, 292)

[node name="Area_SS" type="Area2D" parent="Enemy"]

[node name="Collision" type="CollisionShape2D" parent="Enemy/Area_SS"]
position = Vector2(62.5, -22)
shape = SubResource("RectangleShape2D_nsu5i")
debug_color = Color(0.753493, 0.37196, 0.689078, 0.42)

[connection signal="GameOver" from="Player" to="." method="_on_player_game_over"]
[connection signal="mouse_entered" from="Game_Over/Control/Retry" to="." method="_on_retry_mouse_entered"]
[connection signal="mouse_exited" from="Game_Over/Control/Retry" to="." method="_on_retry_mouse_exited"]
[connection signal="body_entered" from="Death_Area" to="." method="_on_death_area_body_entered"]
[connection signal="body_entered" from="Enemy/Area_SS" to="." method="_on_area_ss_body_entered"]
